# clearn

./: CMakeLists.txt
src/c_kr/: README.MD
src/c_kr/dcl/: CMakeLists.txt  dcl.c  dcl.h  dcl_test.c
src/c_kr/e_2_4/: CMakeLists.txt  e_2_4.c  e_2_4.h  e_2_4_test.c
src/c_kr/e_2_5/: CMakeLists.txt  e_2_5.c  e_2_5.h  e_2_5_test.c
src/c_kr/e_2_6/: CMakeLists.txt  e_2_6.c  e_2_6.h  e_2_6_test.c
src/c_kr/e_2_7/: CMakeLists.txt  e_2_7.c  e_2_7.h  e_2_7_test.c
src/c_kr/e_2_8/: CMakeLists.txt  e_2_8.c  e_2_8.h  e_2_8_test.c
src/c_kr/e_2_9/: CMakeLists.txt  e_2_9.c  e_2_9.h  e_2_9_test.c
src/c_kr/e_3_2/: CMakeLists.txt  e_3_2.c  e_3_2.h  e_3_2_test.c
src/c_kr/e_3_3/: CMakeLists.txt  e_3_3.c  e_3_3.h  e_3_3_test.c
src/c_kr/e_3_4/: CMakeLists.txt  e_3_4.c  e_3_4.h  e_3_4_test.c
src/c_kr/e_3_6/: CMakeLists.txt  e_3_6.c  e_3_6.h  e_3_6_test.c
src/c_kr/e_5_3/: CMakeLists.txt  e_5_3.c  e_5_3.h  e_5_3_test.c
src/c_kr/e_5_4/: CMakeLists.txt  e_5_4.c  e_5_4.h  e_5_4_test.c
src/scratchpad/: CMakeLists.txt  foo.c  scratchpad.c
